Fixed text alignment bug on Account page
Test would overlap in mobile view. CSS error.

--- a/market_manager/react-frontend/src/App.css
+++ b/market_manager/react-frontend/src/App.css
@@ -101,7 +101,7 @@
 .account-body {
   display: block;
     margin-left: auto;
-    margin-right: auto
+    margin-right: auto;
 }
 
 .account-heading {
@@ -126,14 +126,15 @@
   height: 75%;
   display: flex;
   justify-content: center;
-  position:relative;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
 }
 
 .the-assets {
   /* background-color: green; */
-  position:absolute;
   margin-top: 10%;
-  height: 50%;
+  height: 100%;
   width: 80%;
 }
 
